@@ -85,6 +85,12 @@ lazy val `spark-utils` = (project in file("."))
       "org.scalatestplus"             %% "scalacheck-1-15"          % "3.2.11.0"  % Test
     ),
     javaOptions ++= Seq("-Xms8G", "-Xmx8G"),
+    Test / javaOptions ++= Seq(
+      "base/java.lang", "base/java.lang.invoke", "base/java.lang.reflect", "base/java.io", "base/java.net", "base/java.nio",
+      "base/java.util", "base/java.util.concurrent", "base/java.util.concurrent.atomic",
+      "base/sun.nio.ch", "base/sun.nio.cs", "base/sun.security.action",
+      "base/sun.util.calendar", "security.jgss/sun.security.krb5",
+    ).map("--add-opens=java." + _ + "=ALL-UNNAMED"),
     Test / parallelExecution := false,
     Test / fork := true
   )
